<resources>
    <string name="app_name">med-app-android</string>
    <string name="home">Главное</string>
    <string name="add">Создать</string>
    <string name="profile">Профиль</string>
    <string name="email">Почта</string>
    <string name="enter_your_email_and_password_to_log_in">Введите данные для входа</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_your_password">Забыли пароль?</string>
    <string name="enter_your_registration_details">Введите свои данные</string>
    <string name="phone_number">Номер телефона</string>
    <string name="next">Далее</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="select_specializations">Выберите специализации</string>
    <string name="back">Назад</string>
    <string name="register">Регистрация</string>
    <string name="select_the_user_type">Выберите тип аккаунта</string>
    <string name="doctor">Доктор</string>
    <string name="client">Клиент</string>
    <string name="or">ИЛИ</string>
    <string name="registration">Регистрация</string>
    <string name="don_t_you_have_an_account_register_now">Нет учетной записи? Зарегистрируйтесь.</string>
    <string name="phone_number_profile">Номер телефона:</string>
    <string name="hi">Привет</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="oculist">Окулист</string>
    <string name="dentist">Стоматолог</string>
    <string name="ent">Лор</string>
    <string name="dermatologist">Дерматолог</string>
    <string name="neurologist">Невролог</string>
    <string name="enter_request">Введите запрос...</string>
    <string name="categories">Категории</string>
    <string name="recomendations">Рекомендации</string>
    <string name="favorite">Избранное</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="log_out">Выйти</string>
    <string name="my_ads">Мои объявления</string>
    <string name="enter_a_new_password">Введите новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="type_new_data">Введите новые данные</string>
    <string name="create_ad">Создать объявление</string>
    <string name="profile_description">Описание профиля</string>
    <string name="your_ad">Ваше объявление</string>
    <string name="cancel">Отмена</string>
    <string name="ad_title">Заголовок объявления</string>
    <string name="tell_us_about_your_service">Расскажите нам о вашей услуге</string>
    <string name="short_name_ad">Короткое название объявления</string>
    <string name="write_ad_description">Напишите описание вашего объявления</string>
    <string name="Specify_the_address">Укажите адресс</string>
    <string name="specify_the_price">Укажите цену</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="description">Описание</string>
    <string name="contacts">Контакты</string>
    <string name="call">Позвонить</string>
    <string name="in_favorite">В избранное</string>
    <string name="my_feedbacks">Мои отзывы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>