<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileDoctor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_head"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/profile_header_background">

        <TextView
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/hi"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstname"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_1"
            app:layout_constraintStart_toEndOf="@+id/txt_1"
            app:layout_constraintTop_toTopOf="@+id/txt_1" />


        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/email"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/txt_3"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="example@mail.com"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/txt_2"
            app:layout_constraintStart_toEndOf="@+id/txt_2"
            app:layout_constraintTop_toTopOf="@+id/txt_2" />

        <TextView
            android:id="@+id/txt_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/phone_number_profile"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000001"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/txt_3"
            app:layout_constraintStart_toEndOf="@+id/txt_3"
            app:layout_constraintTop_toTopOf="@+id/txt_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</RelativeLayout>